added get in touch section

--- a/index.html
+++ b/index.html
@@ -407,77 +407,147 @@
         <section class="mt-20 mx-5">
             <div class="text-center space-y-4 mx-3 lg:mx-10">
                 <h3 class="text-4xl font-extrabold text-[#131318]">Clients Question</h3>
-                <p class="text-base font-medium text-[#13131899]">Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding of your products or services.</p>
+                <p class="text-base font-medium text-[#13131899]">Address your clients' questions with clarity and
+                    professionalism. Offer concise and informative responses to ensure their satisfaction and
+                    understanding of your products or services.</p>
             </div>
             <div class="flex flex-col lg:flex-row gap-5 mt-16">
                 <div>
                     <img src="Images/11.png" alt="">
                 </div>
-              
+
                 <div class="flex-1 space-y-2">
                     <div class="collapse collapse-plus  ">
-                        <input type="radio" name="my-accordion-3" checked="checked" /> 
+                        <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-medium">
                             Ski Touring
                         </div>
-                        <div class="collapse-content"> 
-                          <p>Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding of your products or services</p>
+                        <div class="collapse-content">
+                            <p>Address your clients' questions with clarity and professionalism. Offer concise and
+                                informative responses to ensure their satisfaction and understanding of your products or
+                                services</p>
                         </div>
-                      </div>
-                      <hr>
-                      <div class="collapse collapse-plus ">
-                        <input type="radio" name="my-accordion-3" /> 
+                    </div>
+                    <hr>
+                    <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">
                             Booking
                         </div>
-                        <div class="collapse-content"> 
-                          <p>Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding of your products or services</p>
+                        <div class="collapse-content">
+                            <p>Address your clients' questions with clarity and professionalism. Offer concise and
+                                informative responses to ensure their satisfaction and understanding of your products or
+                                services</p>
                         </div>
-                      </div>
-                      <hr>
-                      <div class="collapse collapse-plus  ">
-                        <input type="radio" name="my-accordion-3" /> 
+                    </div>
+                    <hr>
+                    <div class="collapse collapse-plus  ">
+                        <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">
                             Pricings
                         </div>
-                        <div class="collapse-content"> 
-                          <p>Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding of your products or services</p>
+                        <div class="collapse-content">
+                            <p>Address your clients' questions with clarity and professionalism. Offer concise and
+                                informative responses to ensure their satisfaction and understanding of your products or
+                                services</p>
                         </div>
-                      </div>
-                      <hr>
-                      <div class="collapse collapse-plus  ">
-                        <input type="radio" name="my-accordion-3" /> 
+                    </div>
+                    <hr>
+                    <div class="collapse collapse-plus  ">
+                        <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">
                             Pricings
                         </div>
-                        <div class="collapse-content"> 
-                          <p>Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding .</p>
+                        <div class="collapse-content">
+                            <p>Address your clients' questions with clarity and professionalism. Offer concise and
+                                informative responses to ensure their satisfaction and understanding .</p>
                         </div>
-                      </div>
-                      <hr>
-                      <div class="collapse collapse-plus  ">
-                        <input type="radio" name="my-accordion-3" /> 
+                    </div>
+                    <hr>
+                    <div class="collapse collapse-plus  ">
+                        <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">
                             Pricings
                         </div>
-                        <div class="collapse-content"> 
-                          <p>Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding of your products or services</p>
+                        <div class="collapse-content">
+                            <p>Address your clients' questions with clarity and professionalism. Offer concise and
+                                informative responses to ensure their satisfaction and understanding of your products or
+                                services</p>
                         </div>
-                      </div>
-                      <div class="collapse collapse-plus  ">
-                        <input type="radio" name="my-accordion-3" /> 
+                    </div>
+                    <div class="collapse collapse-plus  ">
+                        <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">
                             Pricings
                         </div>
-                        <div class="collapse-content"> 
-                          <p>Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding.</p>
+                        <div class="collapse-content">
+                            <p>Address your clients' questions with clarity and professionalism. Offer concise and
+                                informative responses to ensure their satisfaction and understanding.</p>
                         </div>
-                      </div>
-                      <hr>
-                      
+                    </div>
+                    <hr>
+
                 </div>
 
             </div>
+        </section>
+        <section class="mt-20 mx-5">
+            <div class="text-center space-y-4 mx-3 lg:mx-10">
+                <h3 class="text-4xl font-extrabold text-[#131318]">Get In Touch</h3>
+                <p class="text-base font-medium text-[#13131899]">Are there specific office hours or response times that
+                    clients should be aware of when trying to get in touch.</p>
+            </div>
+            <div class="flex flex-col lg:flex-row my-10 gap-5 ">
+                <div class="border px-5 rounded-xl">
+                    <div class="space-y-5 bg-lime-100 p-5 rounded-xl my-5">
+                        <img src="Images/Group 1171275317.png" alt="">
+                        <p class="text-base font-normal text-[#13131899]">Phone Number :</p>
+                        <h4 class="text-xl font-bold text-[#131318]">(+62) 123-321-543</h4>
+                    </div>
+                    <div class="space-y-5 bg-amber-100 p-5 rounded-xl my-5">
+                        <img src="Images/Group 1171275318.png" alt="">
+                        <p class="text-base font-normal text-[#13131899]">Email :</p>
+                        <h4 class="text-xl font-bold text-[#131318]">hockeys@gmail.com</h4>
+                    </div>
+                    <div class="space-y-5 bg-sky-100 p-5 rounded-xl my-5">
+                        <img src="Images/Group 1171275321.png" alt="">
+                        <p class="text-base font-normal text-[#13131899]">Location :</p>
+                        <h4 class="text-xl font-bold text-[#131318]">152/1 Mohakhali Wireless Gate</h4>
+                    </div>
+                </div>
+                <div class="w-full">
+                    <div class="mx-2 lg:mx-10 grid grid-cols-1  lg:grid-cols-2 gap-5">
+                        <div class="">
+                            <label class="text-xl font-bold text-[#131318]">Your Name</label>
+                            <input class="bg-[#13131808] p-5 w-full rounded-xl mt-2" type="text"
+                                placeholder="Enter your full name">
+                        </div>
+                        <div class="">
+                            <label class="text-xl font-bold text-[#131318]">Your Email</label>
+                            <input class="bg-[#13131808] p-5 w-full rounded-xl mt-2" type="email"
+                                placeholder="Enter your email">
+                        </div>
+                        <div class="">
+                            <label class="text-xl font-bold text-[#131318]">Subject</label>
+                            <input class="bg-[#13131808] p-5 w-full rounded-xl mt-2" type="text"
+                                placeholder="Enter your Subject">
+                        </div>
+                        <div class="">
+                            <label class="text-xl font-bold text-[#131318]">Phone Number</label>
+                            <input class="bg-[#13131808] p-5 w-full rounded-xl mt-2" type="number"
+                                placeholder="Enter your phone number">
+                        </div>
+                    </div>
+                    <div class="m-2 lg:m-10  ">
+                        <label class="text-xl font-semibold text-[#131318]">Message</label>
+                        <textarea class="textarea textarea-primary w-full grid grid-cols-2 mt-2" placeholder="Enter your message" rows="7" ></textarea>
+                    </div>
+                    <div class="m-2 lg:m-10  ">
+                        <button class="btn btn-active btn-secondary w-full bg-[#FF4240]">Secondary</button>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
     <footer>
