--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
             </div>
         </nav>
-        <div class="carousel w-full">
+        <div class="carousel w-full ">
             <div id="slide1" class="carousel-item relative w-full">
                 <img src="Images/1.png" class="w-full" />
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -549,9 +549,67 @@
             </div>
 
         </section>
-    </main>
-    <footer>
+        <section class="mt-20 mx-5">
+            <div class="bg-neutral-200 text-center rounded-xl py-5">
+                <h3 class="text-2xl font-extrabold text-[#131318]">Social Media</h3>
+                <div class="space-x-5 my-2 text-2xl">
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+            </div>
 
+        </section>
+    </main>
+    <footer class="bg-black mt-20">
+        <div class="grid grid-cols-1 lg:grid-cols-3 p-12 gap-6">
+            <div class="text-center">
+                <h3 class="text-white text-2xl lg:text-3xl font-extrabold mb-4">Get In Touch</h3>
+                <p class="text-base font-medium text-[#FFFFFF99] space-y-2"> Clear and concise messages enhance understanding and build strong connections. Tailoring communication styles to different contexts ensures relevance and impactful exchanges.s. </p>
+                <div class="mt-8 space-y-6">
+                    <div class="flex items-center gap-3 ">
+                        <i class="fa-solid fa-envelope text-red-700 text-2xl"></i>
+                        <p class="text-base font-medium text-[#FFFFFF99] ">hockeys@support.com</p>
+                    </div>
+                    <div class="flex items-center gap-3 ">
+                        <i class="fa-solid fa-phone text-red-700 text-2xl"></i>
+                        <p class="text-base font-medium text-[#FFFFFF99]">(+62) 123-321-543</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 text-center">
+                <div>
+                    <h3 class="text-white  text-2xl lg:text-3xl font-extrabold mb-4">Company</h3>
+                    <ul class="text-base font-medium text-[#FFFFFF99] space-y-4">
+                        <li><a href="">About us</a></li>
+                        <li><a href="">Leadership</a></li>
+                        <li><a href="">Careers</a></li>
+                        <li><a href="">News & Article</a></li>
+                        <li><a href="">Legal Notic</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="text-white  text-2xl lg:text-3xl font-extrabold mb-4">Support</h3>
+                    <ul class="text-base font-medium text-[#FFFFFF99] space-y-4">
+                        <li><a href="">Help Center</a></li>
+                        <li><a href="">FAQ</a></li>
+                        <li><a href="">Ticket Support</a></li>
+                        <li><a href="">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="text-center">
+                <h3 class="text-white  text-2xl lg:text-3xl font-extrabold mb-4">Services</h3>
+                <ul class="text-base font-medium text-[#FFFFFF99]  space-y-4">
+                    <li><a href="">Academy</a></li>
+                    <li><a href="">Group Lesson</a></li>
+                    <li><a href="">Private Lesson</a></li>
+                    <li><a href="">Hockeys for kids</a></li>
+                    <li><a href="">Hockeys for Adult</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 
