added banner description

--- a/index.html
+++ b/index.html
@@ -85,12 +85,7 @@
                     <a href="#slide4" class="btn btn-circle bg-black text-white">❮</a>
                     <a href="#slide2" class="btn btn-circle bg-black text-white">❯</a>
                 </div>
-                <!-- <div class="w-1/3 max-h-44 bg-black absolute  ">
-                    <h3>Meet all the heroes from the field</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus maiores sit asperiores quibusdam dolorem aperiam, minima odio provident ex nam vitae ipsam atque sequi quisquam ab officia rem. Non, unde.</p>
-                </div>  -->
             </div>
-
             <div id="slide3" class="carousel-item relative w-full">
                 <img src="Images/1.png" class="w-full" />
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -99,6 +94,10 @@
                 </div>
             </div>
 
+        </div>
+        <div class="w-full lg:w-2/4 lg:absolute bg-black p-5  rounded-2xl mt-5 lg:-mt-52 lg:right-5 ">
+            <h3 class="text-2xl font-extrabold text-white my-5">Meet all the heroes from the field</h3>
+            <p class="text-base font-medium text-white">In the context of hockey, there are numerous heroes and legendary figures who have made significant contributions to the sport.</p>
         </div>
 
     </header>
@@ -540,7 +539,8 @@
                     </div>
                     <div class="m-2 lg:m-10  ">
                         <label class="text-xl font-semibold text-[#131318]">Message</label>
-                        <textarea class="textarea textarea-primary w-full grid grid-cols-2 mt-2" placeholder="Enter your message" rows="7" ></textarea>
+                        <textarea class="textarea textarea-primary w-full grid grid-cols-2 mt-2"
+                            placeholder="Enter your message" rows="7"></textarea>
                     </div>
                     <div class="m-2 lg:m-10  ">
                         <button class="btn btn-active btn-secondary w-full bg-[#FF4240]">Secondary</button>
@@ -566,8 +566,10 @@
         <div class="grid grid-cols-1 lg:grid-cols-3 p-12 gap-6">
             <div class="text-center">
                 <h3 class="text-white text-2xl lg:text-3xl font-extrabold mb-4">Get In Touch</h3>
-                <p class="text-base font-medium text-[#FFFFFF99] space-y-2"> Clear and concise messages enhance understanding and build strong connections. Tailoring communication styles to different contexts ensures relevance and impactful exchanges.s. </p>
-                <div class="mt-8 space-y-6">
+                <p class="text-base font-medium text-[#FFFFFF99] space-y-2"> Clear and concise messages enhance
+                    understanding and build strong connections. Tailoring communication styles to different contexts
+                    ensures relevance and impactful exchanges.s. </p>
+                <div class="mt-8 space-y-6 ml-4">
                     <div class="flex items-center gap-3 ">
                         <i class="fa-solid fa-envelope text-red-700 text-2xl"></i>
                         <p class="text-base font-medium text-[#FFFFFF99] ">hockeys@support.com</p>
@@ -614,3 +616,16 @@
 </body>
 
 </html>
+
+
+
+
+<!--  
+<div class="w-full lg:w-2/4  bg-black absolute right-0 -bottom-56 lg:bottom-0 ml-5 lg:ml-0 p-5 mx-5 my-5  rounded-2xl ">
+    <h3 class="text-2xl font-extrabold text-white my-5">Meet all the heroes from the field</h3>
+    <p class="text-base font-medium text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Natus maiores sit asperiores quibusdam dolorem aperiam, minima odio provident ex nam vitae ipsam
+        atque sequi quisquam ab officia rem. Non, unde.</p>
+</div>
+
+-->
