added some comment

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class=" navbar-end gap-5">
                     <i class="fa-solid fa-magnifying-glass"></i>
-                    <a class="btn btn-primary bg-text-primary text-[#fff]">Get Ticket</a>
+                    <a class="btn btn-primary bg-text-primary text-[#fff] border-none">Get Ticket</a>
                 </div>
             </div>
         </nav>
@@ -95,6 +95,7 @@
             </div>
 
         </div>
+        <!-- banner description  -->
         <div class="w-full lg:w-2/4 lg:absolute bg-black p-5  rounded-2xl mt-5 lg:-mt-52 lg:right-5 ">
             <h3 class="text-2xl font-extrabold text-white my-5">Meet all the heroes from the field</h3>
             <p class="text-base font-medium text-white">In the context of hockey, there are numerous heroes and legendary figures who have made significant contributions to the sport.</p>
@@ -102,6 +103,7 @@
 
     </header>
     <main>
+        <!-- professional hockeys club section  -->
         <section class="mt-20 mx-5">
             <div class="text-center space-y-4">
                 <h3 class="text-4xl font-extrabold text-[#131318]">Professional Hockeys Club</h3>
@@ -110,7 +112,7 @@
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 my-14 space-y-3">
                 <div class="text-center">
-                    <div class="radial-progress text-[#4C8DF1]" style="--value:98;" role="progressbar">98%</div>
+                    <div class="radial-progress text-[#4C8DF1]" style="--value:95;" role="progressbar">95%</div>
                     <div class="mt-5">
                         <h4 class="text-xl font-semibold text-[#131318]">Prayer Facility</h4>
                         <p class="text-base font-normal">Our prayer facility provides a tranquil space for individuals
@@ -149,6 +151,7 @@
                 </div>
             </div>
         </section>
+        <!-- program section  -->
         <section class="mt-20 mx-5">
             <div class="text-center space-y-4 mx-3 lg:mx-10">
                 <h3 class="text-4xl font-extrabold text-[#131318]">Program Sections</h3>
@@ -189,6 +192,7 @@
 
             </div>
         </section>
+        <!-- products section  -->
         <section class="mt-20 mx-5">
             <div class="text-center space-y-4 mx-3 lg:mx-10">
                 <h3 class="text-4xl font-extrabold text-[#131318]">Our New Products</h3>
@@ -403,6 +407,7 @@
                 </div>
             </div>
         </section>
+        <!-- clients question section  -->
         <section class="mt-20 mx-5">
             <div class="text-center space-y-4 mx-3 lg:mx-10">
                 <h3 class="text-4xl font-extrabold text-[#131318]">Clients Question</h3>
@@ -490,6 +495,7 @@
 
             </div>
         </section>
+        <!-- get in touch section  -->
         <section class="mt-20 mx-5">
             <div class="text-center space-y-4 mx-3 lg:mx-10">
                 <h3 class="text-4xl font-extrabold text-[#131318]">Get In Touch</h3>
@@ -549,6 +555,7 @@
             </div>
 
         </section>
+        <!-- social media  -->
         <section class="mt-20 mx-5">
             <div class="bg-neutral-200 text-center rounded-xl py-5">
                 <h3 class="text-2xl font-extrabold text-[#131318]">Social Media</h3>
@@ -616,16 +623,3 @@
 </body>
 
 </html>
-
-
-
-
-<!--  
-<div class="w-full lg:w-2/4  bg-black absolute right-0 -bottom-56 lg:bottom-0 ml-5 lg:ml-0 p-5 mx-5 my-5  rounded-2xl ">
-    <h3 class="text-2xl font-extrabold text-white my-5">Meet all the heroes from the field</h3>
-    <p class="text-base font-medium text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Natus maiores sit asperiores quibusdam dolorem aperiam, minima odio provident ex nam vitae ipsam
-        atque sequi quisquam ab officia rem. Non, unde.</p>
-</div>
-
--->
