--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
 <body>
     <header>
+        <!-- navbar  -->
         <nav>
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
@@ -78,23 +79,30 @@
                 </div>
             </div>
         </nav>
-        <div class="carousel w-full ">
+        <!-- carousel slider  -->
+        <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
-                <img src="Images/1.png" class="w-full" />
+              <img src="Images/1.png" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle bg-black text-white">❮</a> 
+                <a href="#slide2" class="btn btn-circle bg-black text-white">❯</a>
+              </div>
+            </div> 
+            <div id="slide2" class="carousel-item relative w-full">
+                <img src="Images/3.png" class="w-full" />
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide4" class="btn btn-circle bg-black text-white">❮</a>
-                    <a href="#slide2" class="btn btn-circle bg-black text-white">❯</a>
+                  <a href="#slide1" class="btn btn-circle bg-black text-white">❮</a> 
+                  <a href="#slide3" class="btn btn-circle bg-black text-white">❯</a>
                 </div>
-            </div>
+               </div> 
             <div id="slide3" class="carousel-item relative w-full">
-                <img src="Images/1.png" class="w-full" />
-                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide2" class="btn btn-circle">❮</a>
-                    <a href="#slide4" class="btn btn-circle">❯</a>
-                </div>
-            </div>
-
-        </div>
+              <img src="Images/4.png" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle bg-black text-white">❮</a> 
+                <a href="#slide4" class="btn btn-circle bg-black text-white">❯</a>
+              </div>
+            </div> 
+          </div>
         <!-- banner description  -->
         <div class="w-full lg:w-2/4 lg:absolute bg-black p-5  rounded-2xl mt-5 lg:-mt-52 lg:right-5 ">
             <h3 class="text-2xl font-extrabold text-white my-5">Meet all the heroes from the field</h3>
